# disparate_lens_stitching

./: .gitignore  .gitmodules  README.md  compose_mosaic.py  dls_env.yml  estimate_hg.py  estimate_homography.py  feature_matchers.py  generate_pgt.py  keynet_env.yml  r2d2_env.yml  simple_test.py  stitch_pair.py  test_align.py  test_fds.py  transform_bev.py
evaluation/: plot_kp_eval.py  run_kp_eval.py
evaluation/keypoints/: CMakeLists.txt  main.cpp
evaluation/resolutions/: main.py
results/synthetic_affine/: akaze.json  brisk.json  hardnet.json  keynet.json  orb.json  r2d2.json  sift-nodesc-norm.json  sift-nodesc.json  sift.json  sosnet.json  surf.json
results/synthetic_fov/: akaze.json  brisk.json  hardnet.json  keynet.json  orb.json  r2d2.json  sosnet.json  surf.json
results/synthetic_fov_opt/: akaze+++.json  brisk+++.json  orb+++.json  sift+++.json
results/synthetic_ratio/: akaze.json  brisk.json  hardnet.json  res_keynet.json  res_orb.json  res_r2d2.json  sift.json  sosnet.json
results/synthetic_ratio_cmp/: akaze+++.json  brisk+++.json  orb+++.json  surf.json
results/synthetic_ratio_opt/: brisk.json  orb.json  sift+++.json  sift++.json  surf+++.json  (+1 more)
scripts/: plot_eval.py  run_eval.py
src/: estimate_homography.py  feature_matchers.py  stitch_extracted.py  stitch_pair.py  stitch_synthetic.py
stitching/: compose_mosaic.py  feature_matchers.py  generate_pgt.py  stitch_pair.py  stitch_synthetic.py
tests/: bev_tf.py  test_fds.py
utility/: transform_bev.py
utils/: generate_synthetic.py  keypoint_sizes.py  rotate_image.py  transform_bev.py
(+26 files in other folders)
